# apisix-admin-panel

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix
.github/workflows/: checks.yml  deploy.yml
core/: Cargo.toml
core/src/: lib.rs  macros.rs  proxy.rs
core/src/apisix/: base.rs  common.rs  consumer_groups.rs  consumers.rs  control_pane.rs  control_plane.rs  mod.rs  routes.rs  secrets.rs  services.rs  stream_routes.rs  upstreams.rs
plugin_w/: Cargo.toml
plugin_w/src/: lib.rs
scripts/: apisix_conf.yaml  check.sh  docker_buildx.sh  pack_wasm.sh  prometheus.yml  release.sh  run_docker_linux.sh  setup.sh
scripts/apisix_standalone/: apisix.uid  apisix_template.yaml  config.yaml  nginx.conf
server/: Cargo.toml
server/src/: admin_api_handler.rs  admin_standalone_handler.rs  auth.rs  config.rs  main.rs  server_error.rs
wasm/: Cargo.toml
wasm/src/: macros.rs  proxy.rs
wasm/src/apisix/: common.rs  consumer_groups.rs  consumers.rs  control_pane.rs  control_plane.rs  mod.rs  plugins.rs  routes.rs  secrets.rs  services.rs  stream_routes.rs  upstreams.rs
web/: .eslintignore  .eslintrc.js  .prettierrc  bun.lockb  next.config.js  package.json  tailwind.config.js  tsconfig.json
web/src/: pkg_mock.js
web/src/bindings/: EntityFields.ts  PluginDefinition.ts  PluginEntities.ts  PluginOption.ts  PluginPropertyType.ts  PropertyType.ts  Required.ts  ServerInfo.ts
web/src/components/: Dashboard.tsx  EntityField.tsx  JSONField.css  JSONField.tsx  Layout.tsx  LogIn.tsx  MultiField.tsx  PluginsField.tsx  Section.tsx
(+30 files in other folders)
