[package]
name = "apisix-admin-panel"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-files = "0.6.6"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
apisix-admin-panel-core = { path = "../core" }
reqwest = "0.11.6"
serde_yaml = "0.9.34"
ts-rs = "9.0.1"
jsonwebtoken = "9.3.0"
